# arch

./: .dockerignore  .env  .gitignore  Book_test.xlsx  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  ККМ.xls
app/: config.py  database.py  main.py  models.py  routers.py  service.py
frontend/: Dockerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: BurialPage.tsx  ClusterResultsPage.tsx  HomePage.tsx
models/: word_vectors.kv
